--- a/application/views/buttons.html
+++ b/application/views/buttons.html
@@ -365,7 +365,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">                          
-                          <li><a class="" href="profile.html">Profile</a></li>
+                          <li><a class="" href="profile.php">Profile</a></li>
                           <li><a class="" href="login.html"><span>Login Page</span></a></li>
                           <li><a class="" href="blank.html">Blank Page</a></li>
                           <li><a class="" href="404.html">404 Error</a></li>
