Management admin songs (on progress).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4944,6 +4944,9 @@ span.customSelect.changed {
     border: groove;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
+    width: 135px;
+    height:135px;
+    background: url(../img/default_cover.PNG) no-repeat center;
 }
 
 .edit-cover {
