--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4964,7 +4964,7 @@ span.customSelect.changed {
     position: relative;
     width: 135px;
     height:180px;
-    background: url(../img/member_avatar.png) no-repeat center;
+    background: url(../img/default_avatar.png) no-repeat center;
 }
 
 .edit-cover, .edit-avatar, .edit-merchandise {
