finishing landing page

--- a/assets/css/bootstrap-ms.css
+++ b/assets/css/bootstrap-ms.css
@@ -167,7 +167,7 @@
   .col-ms-offset-11 {
     margin-left: 91.66667%; }
 
-  .visable-ms {
+  .visible-ms {
     display:block; }
 
   .hidden-ms {
