--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -12,11 +12,12 @@ html, body {
 
 body{
 	overflow-x: hidden;
-	background-color: #EEEEEE !important;
+	/*background-color: #EEEEEE !important;*/
 }
 
 .container.content{
 	padding-top: 120px;
+	min-height: 100%;
 }
 
 .container h1{
@@ -128,7 +129,8 @@ hr.hr-home{
 
 .gallery-item-home{
 	position: absolute;
-	right: 0px;
+	background-size: cover;
+	background-position: center;
 }
 
 #member, #contact_us{
@@ -220,7 +222,7 @@ hr.hr-home{
 
 /*=========NEWS=========*/
 .news-list-item{
-	background-color:rgba(255,255,255,0.5);
+	background-color:rgba(255,255,255,0.9);
 	-webkit-border-radius: 25px;
 	-moz-border-radius: 25px;
 	border-radius:25px;
@@ -239,6 +241,19 @@ hr.hr-home{
 	font-weight: bold;
 	text-align: right;
 }
+
+/*=========EVENT=========*/
+.event-list-date{
+	font-style: italic;
+	font-size: 0.9em;
+	font-weight: bold;
+}
+
+hr.hr-event{
+	margin-top: 0px;
+	border-top-color: #AAAAAA;
+}
+
 
 /*=========MEMBER=========*/
 .member-list-item{
@@ -352,7 +367,7 @@ hr.hr-home{
 .footer{
 	text-align: center;
 	padding: 10px;
-	background-color: black;
+	background-color: rgba(0,0,0,0.7);
 	color: #FFFFFF;
 }
 
