--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -127,10 +127,21 @@ hr.hr-home{
 	text-align: center;
 }
 
+#gallery-item-cont{
+	position: relative;
+	top: 15px;
+	height:300px; 
+	width: 650px; 
+	margin: auto;
+}
+
 .gallery-item-home{
 	position: absolute;
 	background-size: cover;
 	background-position: center;
+	-webkit-box-shadow: -10px 10px 15px 0px rgba(0,0,0,0.5);
+	-moz-box-shadow: -10px 10px 15px 0px rgba(0,0,0,0.5);
+	box-shadow: -10px -10px 15px 0px rgba(0,0,0,0.5);
 }
 
 #member, #contact_us{
@@ -200,7 +211,7 @@ hr.hr-home{
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url(/assets/img/header_batik2.png);
+	background-image: url(/assets/img/header_batik3.png);
 	background-size: cover;
 	background-position: right;
 	background-repeat: no-repeat;
@@ -344,23 +355,69 @@ hr.hr-event{
 
 
 /*=========GALLERY=========*/
-.album-cover{
+.album-cover-first, .album-cover{
 	margin-bottom:30px;
 }
 
-.album-cover-desc{
-	position: relative;
-	width: 100%;
+.album-cover-photo:after {
+    background-color: white;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    z-index: 0;
 }
 
-.album-cover-desc div{
-	position: absolute;
+.album-cover-desc-cont{
+	padding-left:0px !important;
+}
+
+.album-cover-desc{
+	position: absolute !important;
 	bottom: 0;
 	width: 100%;
 	background-color: rgba(255,255,255,0.8);
 	font-size: 1.3em;
 	padding: 10px;
 	text-align: center;
+}
+
+.grid-photo{
+	width: 250px;
+	float: left;
+	margin: 5px;
+}
+
+/*=========MERCHANDISE=========*/
+.merchandise-item-info{
+	background-color:rgba(255,255,255,0.9);
+	-webkit-border-radius: 25px;
+	-moz-border-radius: 25px;
+	border-radius:25px;
+	border-left: 4px solid #333333;
+	border-bottom: 4px solid #333333;
+	border-top: 1px solid #CCCCCC;
+	border-right: 1px solid #CCCCCC;
+	text-align: center;
+	line-height: 0.8em;
+	padding: 10px;
+}
+
+.merchandise-item-info strong{
+	font-size: 1.3em;
+}
+
+.merchandise-item-info hr{
+	margin-top: 0px;
+	margin-bottom: 10px;
+	border-top: 2px #DDDDDD solid;
+}
+
+.merchandise-item-info span:last-child{
+	font-style: italic !important;
 }
 
 /*=========FOOTER=========*/
@@ -393,7 +450,6 @@ hr.hr-event{
 	.header-back-batik{
 		background-size: initial;
 		height: 65px;
-		background-position: top right;
 	}
 
 }
@@ -410,7 +466,7 @@ hr.hr-event{
 	}
 
 	.nav>li>a{
-	    padding-left: 10px !important;
-	    padding-right: 10px !important;
+	    padding-left: 9px !important;
+	    padding-right: 9px !important;
 	}
 }
