--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@ Website: http://geekslabs.com/
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 @import url(line-icons.css);
 
+body,html{
+    height: 100%;
+}
 body {
     color: #797979;
     background: #eeeeee;
@@ -16,6 +19,7 @@ body {
     padding: 0px !important;
     margin: 0px !important;
     font-size:14px !important;
+    overflow-x: hidden;
 }
 h1,h2,h3,h4,h5{
     font-weight: 300;
@@ -98,7 +102,7 @@ table tr th { color: #688a7e;}
 
 .login-form {
     max-width: 350px;
-    margin: 200px auto 0;
+    margin: auto;
     background: #d5d7de;    
 }
 .login-img-body .login-form{
@@ -4943,6 +4947,9 @@ span.customSelect.changed {
     background:url(../img/customSelect-arrow.gif) no-repeat center right;
 }
 
-.admin-background {
-    background: url('../img/background-login-admin.png') no-repeat;
+/*custom class*/
+#banner{
+    position: relative;
+    background-color:#CA292B;
+    height:100%;
 }
