--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -5,7 +5,7 @@
 
 html, body {
 	height:100%;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-family: Verdana;
 	font-size: 16px !important;
 	line-height: 2em !important;
 }
@@ -62,6 +62,11 @@ body{
 	background-color: #F78619;
 }
 
+.btn-wrapper{
+	margin-top: 40px;
+	text-align: center;
+}
+
 .navbar-home, .navbar-home-fixed{
 	position: absolute;
 	top: 0;
@@ -98,7 +103,8 @@ section{
 }
 section h2{
 	font-family:'Verdana';
-	font-size: 4em;
+	font-size: 48px;
+	margin: 0 0 40px 0;
 }
 
 section h2 a{
@@ -123,8 +129,6 @@ hr.hr-home{
 #about_us{
 	text-align: center;
 	background-color: #F9F9F9;
-	padding-top: 65px;
-	padding-bottom: 60px;
 }
 
 /*.about-us-bg-home{
@@ -148,8 +152,6 @@ hr.hr-home{
 #news{
 	/*min-height: 500px;*/
 	background-color: #F1F1F1;
-	padding-top: 60px;
-	padding-bottom: 60px;
 }
 
 #news h2{
@@ -193,8 +195,6 @@ hr.hr-home{
 	background-size: cover;
 	background-position: center;
 	color: #FFFFFF;
-	padding-top: 30px;
-	padding-bottom: 30px;
 }
 
 #song dt a{
@@ -217,7 +217,6 @@ hr.hr-home{
 
 #video{
 	background-color: #F1F1F1;
-	padding-bottom: 30px;
 }
 
 #video h2{
@@ -226,7 +225,6 @@ hr.hr-home{
 
 #gallery{
 	background-color: #F9F9F9;
-	padding-bottom: 30px;
 	text-align: center;
 }
 
@@ -243,7 +241,7 @@ hr.hr-home{
 #gallery-item-cont{
 	position: relative;
 	top: 15px;
-	width: 650px; 
+	width: 100%; 
 	margin: 0 auto 60px auto;
 }
 
@@ -268,14 +266,8 @@ hr.hr-home{
 	text-align: center;
 }
 
-#member{
-	padding-top: 65px;
-	padding-bottom: 60px;
-}
-
 #merchandise{
 	background-color: #F1F1F1;
-	padding-bottom: 30px;
 }
 
 #merchandise h2{
@@ -285,7 +277,6 @@ hr.hr-home{
 #member{
 	color: #000000;
 	background-color: #F9F9F9;
-	padding-bottom: 30px;
 }
 
 .member-img-cont{
@@ -484,7 +475,7 @@ hr.hr-event{
 }
 
 .grid-video{
-	width: 350px;
+	width: 28%;
 	float: left;
 	margin: 15px;
 }
@@ -694,6 +685,10 @@ hr.hr-merchandise{
 	.member-img-cont{
 		width: 30%;
 	}
+
+	.grid-video{
+		width: 97%;
+	}
 }
 
 @media (min-width:992px) and (max-width: 1199px){
@@ -714,6 +709,10 @@ hr.hr-merchandise{
 
 	.member-img-cont{
 		width: 25%;
+	}
+
+	.grid-video{
+		width: 45%;
 	}
 }
 
