--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -3,7 +3,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
     width: 135px;
-    height:135px;
+    height: 135px;
     background: url(../img/default_cover.png) no-repeat center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -14,7 +14,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
     width: 135px;
-    height:135px;
+    height: 135px;
     background: url(../img/default_merchandise.png) no-repeat center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
     width: 180px;
-    height:180px;
+    height: 180px;
     background: url(../img/default_avatar.png) no-repeat center;
     margin: auto;
 }
@@ -43,7 +43,7 @@
     font-weight: lighter;
 }
 
-.edit-avatar{
+.edit-avatar {
     width: 176px;
 }
 
@@ -89,7 +89,7 @@ label.upload-song {
 .view-avatar {
     position: relative;
     width: 180px;
-    height:180px;
+    height: 180px;
 }
 
 .socmed-icon {
@@ -97,7 +97,7 @@ label.upload-song {
     margin-bottom: 5px;
 }
 
-div.MultiFile-label {
+div.img-preview-label {
     border: groove;
     margin: 10px 20px 0 0;
     padding: 0 10px 10px 10px;
@@ -105,12 +105,12 @@ div.MultiFile-label {
     height: 180px;
 }
 
-span.MultiFile-title {
+span.img-preview-title {
     margin-left: 5px;
     font-weight: bold;
 }
 
-a.MultiFile-remove {
+a.img-preview-remove {
     font-size: 15pt;
     color: red;
 }
@@ -131,11 +131,16 @@ div.success {
     background-color: #dff8e3;
 }
 
-.form .required{
+.form .required {
     color: red;
 }
 
 label.error {
     color: red;
     font-size: 9pt;
+}
+
+.uploading {
+    display: none;
+    margin-top: 15px;
 }
