--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -301,6 +301,7 @@ hr.hr-home{
 	width: 15%;
 	margin: 20px;
 	display:inline-block;
+	font-weight: bold;
 }
 
 .member-img-home{
@@ -337,7 +338,7 @@ hr.hr-home{
 /*==========HEADER=========*/
 .kw-nav-top{
 	background-color: #CA292B !important;
-	border-color: #921C1E !important;
+	border: none !important;
 }
 
 .navbar-nav>li>a:focus, .navbar-nav>li>a:hover{
@@ -637,9 +638,8 @@ hr.hr-merchandise{
 .footer{
 	text-align: center;
 	padding: 10px;
-	background-color: #CA292B;
+	background-color: #AF2022;
 	color: #FFFFFF;
-	border-top: 1px #921C1E solid;
 }
 
 .footer-socmed{
